--- a/put/style.css
+++ b/put/style.css
@@ -10,7 +10,7 @@ header {
     justify-content: space-around;
     min-height: 10vh;
     align-items: center;
-    filter: drop-shadow(0px 5px 3px)
+    filter: drop-shadow(0px 5px 3px);
 }
 
 
@@ -34,6 +34,10 @@ div{
 .logo{
     font-weight: 400;
     font-size: 20px;
+    text-decoration: none;
+    color: black;
+    font-size: 22px; 
+
 }
 
 nav{
@@ -67,7 +71,7 @@ nav{
 
 .nav-link:hover{
     font-weight: 500;
-    box-shadow: 5px 3px 20px black;   
+    filter: drop-shadow(0px 5px 3px);   
 }
 
 .presentation{
@@ -124,7 +128,8 @@ body {
 
 
 
-.white-box { 
+.white-box {
+    display: flex;
     width: 500px;
     height: 700px;
     margin-top: 80px;
@@ -143,40 +148,29 @@ body {
 }
 
 
-.vertical-text {width:50px; height:50px; margin: 30px 0 auto auto; background: #4CB1FF;}
+.one-car,.the-other-car{
+   
+    }
 
-.vertical-text span {
-width: 50px;
-display: inline-block;
-text-align: center;
--webkit-transform: rotate(-90deg);
--moz-transform: rotate(-90deg);
--ms-transform: rotate(-90deg);
--o-transform: rotate(-90deg);
-transform: rotate(-90deg);
-}
 
-.one-car{
-    display: flex;}
+.one-car img,.the-other-car img{
 
-.one-car img{
-    flex: 1;
-    width: 10px;
-    height: 500px;
-    justify-content: space-between;
+    height: 40vh;
+    margin: auto;
+    width: 95%;
+    
+
 }
 
 
+.one-car img:hover,.the-other-car img:hover{
 
+    filter: drop-shadow(7px 20px 13px);  
+    margin: auto;
+    width: 95%;
+    justify-content: flex-end;
 
-
-
-
-
-
-
-
-
+}
 
 
 
